# Gaucho-Agent

./: .env.example  .gitignore  EXPERIMENTS.md  EXPERIMENT_PLAN.md  LICENSE  PRESENTATION.md  README.md  REPORT.md  dev-log.md  gaucho_agent_6_week_project_plan.md  gaucho_agent_implementation_plan_for_coding_agent.md  pyproject.toml
.claude/: settings.json
data/: .gitignore  adversarial_conversations.json  synthetic_probes.json
gaucho_agent/: __init__.py  config.py  db.py
gaucho_agent/api/: main.py  routes_chat.py  routes_status.py  routes_sync.py
gaucho_agent/cli/: main.py
gaucho_agent/clients/: __init__.py  campus_live.py  canvas_ics.py  llm_anthropic.py  llm_openai.py  ucsb_api.py
gaucho_agent/models/: dining.py  event.py  llm_cache.py  memory.py  source.py  sync_run.py
gaucho_agent/prompts/: memory_judge.py  planner.txt  system.txt  user_simulator.py
gaucho_agent/schemas/: __init__.py  canvas.py  tool_io.py  ucsb.py
gaucho_agent/services/: __init__.py  embeddings.py  eval_runner.py  llm_cache.py  longmemeval.py  memory.py  memory_backend.py  memory_judge.py  planner.py  retrieval.py  sync_academics.py  sync_canvas.py  sync_dining.py  tool_executor.py
gaucho_agent/tools/: __init__.py  academics.py  assignments.py  campus.py  dining.py  planning.py  schedule.py
gaucho_agent/utils/: logging.py  parsing.py  time.py
results/: ablations.csv  exp1_counterfactual.csv  exp2_budget_sweep.csv  exp3_adversarial.csv  exp4_process_metrics.csv  exp5_provenance.csv  smoke.csv
scripts/: build_synthetic_probes.py  demo_seed.py  download_longmemeval.py  eval_ablations.py  eval_adversarial.py  eval_budget_sweep.py  eval_counterfactual.py  eval_longmemeval.py  eval_process_metrics.py  eval_provenance.py  make_figures.py  simulate_user.py  smoke_memory.py
tests/: __init__.py  test_canvas_ics.py  test_eval_runner.py  test_longmemeval.py  test_memory_chat.py  test_memory_integration.py  test_memory_judge.py  test_memory_scoring.py  test_memory_service.py  test_planner.py  test_sync_academics.py  test_tools.py  test_ucsb_client.py
tests/fixtures/: sample.ics
(+4 files in other folders)
