[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaucho-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "typer[all]>=0.12",
    "sqlmodel>=0.0.18",
    "httpx>=0.27",
    "icalendar>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13",
    "tenacity>=8",
    "openai>=1.0",
    "anthropic>=0.25",
]

[project.scripts]
gaucho = "gaucho_agent.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
