[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaucho-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "typer[all]>=0.12",
    "sqlmodel>=0.0.18",
    "httpx>=0.27",
    "icalendar>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13",
    "tenacity>=8",
    "openai>=1.0",
    "anthropic>=0.25",
    "numpy>=1.26",
]

[project.scripts]
gaucho = "gaucho_agent.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx"]
# Real MiniLM embeddings + mem0 baseline. Heavy (pulls torch); the system
# falls back to a deterministic offline embedder when these are absent.
# qdrant-client pinned <1.13: 1.13 removed .search() which mem0 0.1.40
# still calls (third-party version skew, not our bug).
memory = [
    "sentence-transformers>=2.7",
    "mem0ai==0.1.40",
    "qdrant-client>=1.7,<1.13",
]
eval = ["pandas>=2.0", "matplotlib>=3.8", "datasets>=2.19"]

[tool.setuptools.packages.find]
include = ["gaucho_agent*"]
exclude = ["tests*", "scripts*", "data*", "results*", "figures*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
